# ecl-android-opengl

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/lisp/etc/: dev.lisp  init.lisp  jni.lisp  trash.lisp  user.lisp
app/src/main/cpp/: CMakeLists.txt  JNILib.c  JNILib.h  ecl_boot.c  logging.c
app/src/main/java/ru/betelgeuse/dunpixpar/: JNIActivity.java  JNILib.java  JNIView.java
app/src/main/res/values/: strings.xml
